Fix alignment.

--- a/static/css/channels.css
+++ b/static/css/channels.css
@@ -175,7 +175,7 @@ table.channels-table > tbody > tr > th {
 }
 
 .add-integration li.link-to-github {
-    padding: 16px 8px;
+    padding: 16px 0;
 }
 
 .link-to-github p {
